[tool.poetry]
name = "baltic-stream-grabber"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium-wire = "^5.1.0"
webdriver-manager = "^4.0.2"
selenium = "^4.24.0"
blinker = "<1.8"
setuptools = "^80.9.0"
ultralytics = "^8.3.246"
sahi = "^0.11.36"
huggingface-hub = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"