[tool.poetry]
name = "baltic-stream-grabber"
version = "0.1.0"
description = ""
authors = [""]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
selenium-wire = "^5.1.0"
webdriver-manager = "^4.0.2"
selenium = "^4.24.0"
blinker = "<1.8"
setuptools = "^80.9.0"
ultralytics = "^8.3.246"
sahi = "^0.11.36"
huggingface-hub = "^1.2.3"
torch = "^2.5.0"
torchvision = "^0.20.0"
matplotlib = "^3.9.0"
lwcc = "^0.0.7"
numpy = "^1.26.0"
pillow = "^10.0.0"
timm = "^1.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"